resolve sonarcloud issues